staking page colors and gaps issues

--- a/apps/block_scout_web/assets/css/components/_stakes.scss
+++ b/apps/block_scout_web/assets/css/components/_stakes.scss
@@ -16,6 +16,7 @@ $stakes-stats-item-border-color: #fff !default;
 .stakes-top-stats {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 
   @include stats-item($stakes-stats-item-border-color, $stakes-stats-item-color);
 
@@ -68,7 +69,7 @@ $stakes-stats-item-border-color: #fff !default;
 }
 
 .stakes-top-stats-login {
-  color: $primary;
+  color: $secondary;
   cursor: pointer;
   margin-right: 8px;
 }
@@ -138,5 +139,12 @@ $stakes-stats-item-border-color: #fff !default;
     grid-column-start: auto !important;
     grid-row-start: auto !important;
     justify-self: center;
+  }
+}
+
+.staking-pg-container {
+  padding: 0 30px 30px;
+  &.at-bottom {
+    padding-top: 30px;
   }
 }
